updated firts page

--- a/index.html
+++ b/index.html
@@ -33,35 +33,44 @@
                             <a class="header-button__link" href="" data-goto="6">заказать</a>
                         </div>
                     </header>
-                    <main class="main-content__first">
-                        <sidebar class="side-first-page">
-                            <ul class="first-side-menu__list">
-                                <li class="first-side-menu__item--active">
-                                    <img class="first-side-menu__item__img" src="img/point.png" alt="dot">
+                    <sidebar class="side-first-page">
+                            <ul class="side__list">
+                                <li class="side__item side__item--active">
+                                    <a href="" class="side__item__img" data-goto="1"></a>
+                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
                                 </li>
-                                <li class="first-side-menu__item">
-                                    <img class="first-side-menu__item__img" src="img/point.png" alt="dot">
+                                <li class="side__item">
+                                    <a href="" class="side__item__img" data-goto="1"></a>
+                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
                                 </li>
-                                <li class="first-side-menu__item">
-                                    <img class="first-side-menu__item__img" src="img/point.png" alt="dot">
+                                <li class="side__item">
+                                    <a href="" class="side__item__img" data-goto="1"></a>
+                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
                                 </li>
-                                <li class="first-side-menu__item">
-                                    <img class="first-side-menu__item__img" src="img/point.png" alt="dot">
+                                <li class="side__item">
+                                    <a href="" class="side__item__img" data-goto="1"></a>
+                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
                                 </li>
-                                <li class="first-side-menu__item">
-                                    <img class="first-side-menu__item__img" src="img/point.png" alt="dot">
+                                <li class="side__item">
+                                    <a href="" class="side__item__img" data-goto="1"></a>
+                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
                                 </li>
-                                <li class="first-side-menu__item">
-                                    <img class="first-side-menu__item__img" src="img/point.png" alt="dot">
+                                <li class="side__item">
+                                    <a href="" class="side__item__img" data-goto="1"></a>
+                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
                                 </li>
-                                <li class="first-side-menu__item">
-                                    <img class="first-side-menu__item__img" src="img/point.png" alt="dot">
+                                <li class="side__item">
+                                    <a href="" class="side__item__img" data-goto="1"></a>
+                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
                                 </li>
-                                <li class="first-side-menu__item">
-                                    <img class="first-side-menu__item__img" src="img/point.png" alt="dot">
+                                <li class="side__item">
+                                    <a href="" class="side__item__img" data-goto="1"></a>
+                                    <!--<img class="first-side-menu__item__img" src="img/point.png" alt="dot">-->
                                 </li>
                             </ul>
                         </sidebar>
+                    <main class="main-content__first">
+                        <div class="img-first"><img src="img/burger-first.png" alt="burger"></div>
                         <div class="first-general">
                             <h1 class="page-title first-page__title">мы делаем</h1>
                             <h2 class="page__subtitle">натуральные</br>бургеры</h2>
@@ -100,10 +109,10 @@
                 </div>
             </section>
             <section class="section feedback-page">
-                <div class="container">
                     <ul class="feedback__list">
                         <li class="feedback__item">
-                            <img class="feedback__img" src="img/feedback8.jpg" alt="girl">
+                            <div class="feedback__img" style="background-image: url(img/feedback8.jpg);"></div>
+                            <!--<img class="feedback__img" src="img/feedback8.jpg" alt="girl">-->
                             <div class="feedback__content">
                                 <p class="feedback__title">Константин Спилберг</p>
                                 <p class="feedback__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
@@ -167,7 +176,6 @@
                             </div>
                         </li>
                     </ul>
-                </div>
             </section>
         </div>
     </div>
