adding few more sections

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                         <a href="" data-goto="1"><img src="img/arrow1slide.png" alt="arrow"></a>
                     </div>
                 </div>
-                
             </section>
+            <!--2nd page-->
             <section class="section second-page">
                 <div class="container">
                     <div class="secondpage__top">
@@ -108,6 +108,78 @@
                     </div>
                 </div>
             </section>
+            <!--3rd page-->
+             <section class="section third-page">
+            </section>
+            <!--4th page -->
+            <section class="section fouth-page">
+                <div class="container">
+                    <div class="fouthpage__right">
+                        <div class="fouthpage-top">
+                            <h1 class="fouthpage page-title">команда</h1>
+                        </div>
+                        <ul class="fouthpage__block">
+                            <li class="fouthpage__item"><p>дэниэл рэдклиф</p>
+                                <div class="fouthpage__hidden">
+                                    <img class="fouthpage__hidden__img" src="img/meat.png" alt="meat">
+                                    <p class="fouthpage__hidden__title">Оператор</p>
+                                    <p class="fouthpage__hidden__text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                                </div>
+                            </li>
+                            <li class="fouthpage__item"><p>ричард джеймс</p>
+                                <div class="fouthpage__hidden">
+                                    <img class="fouthpage__hidden__img" src="img/meat.png" alt="meat">
+                                    <p class="fouthpage__hidden__title">Оператор</p>
+                                    <p class="fouthpage__hidden__text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                                </div>
+                            </li>
+                            <li class="fouthpage__item"><p>джейк финн</p>
+                                <div class="fouthpage__hidden">
+                                    <img class="fouthpage__hidden__img" src="img/meat.png" alt="meat">
+                                    <p class="fouthpage__hidden__title">Оператор</p>
+                                    <p class="fouthpage__hidden__text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                                </div>
+                            </li>
+                            <li class="fouthpage__item"><p>николай иванов</p>
+                                <div class="fouthpage__hidden">
+                                    <img class="fouthpage__hidden__img" src="img/meat.png" alt="meat">
+                                    <p class="fouthpage__hidden__title">Оператор</p>
+                                    <p class="fouthpage__hidden__text">С радостью поможет подобрать идеальный бургер и оформить заказ.</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <!--5th page-->
+            <section class="section fifth-page">
+                <div class="container">
+                    <ul class="fouthpage__blocks">
+                        <li class="fouthpage__item"><p>для мясоедов</p>
+                            <div class="fouthpage__hidden">
+                                <img class="fouthpage__hidden__img" src="img/meat.png" alt="meat">
+                                <p class="fouthpage__hidden__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
+Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.</p>
+                            </div>
+                        </li>
+                        <li class="fouthpage__item"><p>вегетарианское</p>
+                            <div class="fouthpage__hidden">
+                                <img class="fouthpage__hidden__img" src="img/meat.png" alt="meat">
+                                <p class="fouthpage__hidden__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
+Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.</p>
+                            </div>
+                        </li>
+                        <li class="fouthpage__item"><p>диетическое</p>
+                            <div class="fouthpage__hidden">
+                                <img class="fouthpage__hidden__img" src="img/meat.png" alt="meat">
+                                <p class="fouthpage__hidden__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
+Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!--feedback page-->
             <section class="section feedback-page">
                     <ul class="feedback__list">
                         <li class="feedback__item">
@@ -120,7 +192,8 @@
                             </div>
                         </li>
                         <li class="feedback__item">
-                            <img class="feedback__img" src="img/feedback7.jpg" alt="boy">
+                            <div class="feedback__img" style="background-image: url(img/feedback6.jpg);"></div>
+                            <!--<img class="feedback__img" src="img/feedback7.jpg" alt="boy">-->
                             <div class="feedback__content">
                                 <p class="feedback__title">Константин Спилберг</p>
                                 <p class="feedback__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
@@ -128,7 +201,8 @@
                             </div>
                         </li>
                         <li class="feedback__item">
-                            <img class="feedback__img" src="img/feedback6.jpg" alt="boy">
+                            <div class="feedback__img" style="background-image: url(img/feedback4.jpg);"></div>
+                            <!--<img class="feedback__img" src="img/feedback6.jpg" alt="boy">-->
                             <div class="feedback__content">
                                 <p class="feedback__title">Константин Спилберг</p>
                                 <p class="feedback__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
@@ -136,7 +210,8 @@
                             </div>
                         </li>
                         <li class="feedback__item">
-                            <img class="feedback__img" src="img/feedback5.jpg" alt="girl">
+                            <div class="feedback__img" style="background-image: url(img/feedback2.jpg);"></div>
+                            <!--<img class="feedback__img" src="img/feedback5.jpg" alt="girl">-->
                             <div class="feedback__content">
                                 <p class="feedback__title">Константин Спилберг</p>
                                 <p class="feedback__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
@@ -144,7 +219,8 @@
                             </div>
                         </li>
                         <li class="feedback__item">
-                            <img class="feedback__img" src="img/feedback4.jpg" alt="girl">
+                            <div class="feedback__img" style="background-image: url(img/feedback7.jpg);"></div>
+                            <!--<img class="feedback__img" src="img/feedback4.jpg" alt="girl">-->
                             <div class="feedback__content">
                                 <p class="feedback__title">Константин Спилберг</p>
                                 <p class="feedback__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
@@ -152,7 +228,8 @@
                             </div>
                         </li>
                         <li class="feedback__item">
-                            <img class="feedback__img" src="img/feedback3.jpg" alt="boy">
+                            <div class="feedback__img" style="background-image: url(img/feedback5.jpg);"></div>
+                            <!--<img class="feedback__img" src="img/feedback3.jpg" alt="boy">-->
                             <div class="feedback__content">
                                 <p class="feedback__title">Константин Спилберг</p>
                                 <p class="feedback__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
@@ -160,7 +237,8 @@
                             </div>
                         </li>
                         <li class="feedback__item">
-                            <img class="feedback__img" src="img/feedback2.jpg" alt="boy">
+                            <div class="feedback__img" style="background-image: url(img/feedback3.jpg);"></div>
+                            <!--<img class="feedback__img" src="img/feedback2.jpg" alt="boy">-->
                             <div class="feedback__content">
                                 <p class="feedback__title">Константин Спилберг</p>
                                 <p class="feedback__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
@@ -168,7 +246,8 @@
                             </div>
                         </li>
                         <li class="feedback__item">
-                            <img class="feedback__img" src="img/feedback1.jpg" alt="boy">
+                            <div class="feedback__img" style="background-image: url(img/feedback1.jpg);"></div>
+                            <!--<img class="feedback__img" src="img/feedback1.jpg" alt="boy">-->
                             <div class="feedback__content">
                                 <p class="feedback__title">Константин Спилберг</p>
                                 <p class="feedback__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
@@ -176,6 +255,66 @@
                             </div>
                         </li>
                     </ul>
+            </section>
+            <!--7th page-->
+            <section class="section seventh-page">
+                <div class="container">
+                    <div class="seventhpage__right">
+                        <div class="seventhpage-top">
+                            <h1 class="seventhpage-title">закажите доставку</h1>
+                        </div>
+                        <div class="forms__items">
+                            <form class="forms-elements" method="post">
+                                <div class="forms__row clearfix">
+                                    <label class="forms__cell">
+                                        <div class="forms__field--title">Ваше имя</div>
+                                        <input type="text" class="forms__input--text" placeholder="Андрей">
+                                    </label>
+                                    <label class="forms__cell">
+                                        <div class="forms__field--title">Ссылка на профиль VK</div>
+                                        <input type="text" class="forms__input--text" placeholder="vk.com/example">
+                                    </label>
+                                </div>
+                                <div class="forms__row">
+                                    <label class="forms__textarea-label">
+                                        <div class="forms__field--title">Текст отзыва</div>
+                                        <textarea type="textarea" class="forms__input--textarea" placeholder="Оставьте отзыв"></textarea>
+                                    </label>
+                                </div>
+                                <div class="forms__buttons clearfix">
+                                    <div class="forms__buttons--left clearfix">
+                                        <div class="forms__buttons--title">Отображать фото в отзыве?</div>
+                                        <div class="forms__radio--container">
+                                            <label class="forms__radio">
+                                                <input type="radio" name="photo" class="forms__radio--element" checked>
+                                                <div class="forms__radio--fake"></div>
+                                                <div class="forms__radio--text">Да</div>
+                                            </label>
+                                        </div>
+                                        <div class="forms__radio--container">
+                                            <label class="forms__radio">
+                                                <input type="radio" name="photo" class="forms__radio--element">
+                                                <div class="forms__radio--fake"></div>
+                                                <div class="forms__radio--text">Нет</div>
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <div class="forms__buttons--right">
+                                        <button class="submit__button" type="submit" value="Отправить">Отправить</button>
+                                    </div>
+                                </div>
+                                <div class="forms__buttons">
+                                    
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--8th page-->
+            <section class="section eight-page">
+                <div class="container">
+                </div>
             </section>
         </div>
     </div>
