changing some paddings

--- a/index.html
+++ b/index.html
@@ -154,25 +154,26 @@
             <!--5th page-->
             <section class="section fifth-page">
                 <div class="container">
-                    <ul class="fouthpage__blocks">
-                        <li class="fouthpage__item"><p>для мясоедов</p>
-                            <div class="fouthpage__hidden">
-                                <img class="fouthpage__hidden__img" src="img/meat.png" alt="meat">
-                                <p class="fouthpage__hidden__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
+                    <ul class="fifthpage__blocks">
+                        <li class="fifthpage__item">
+                            <div class="vertial-text"><p>для мясоедов</p></div>
+                            <div class="fifthpage__hidden">
+                                <img class="fifthpage__hidden__img" src="img/meat.png" alt="meat">
+                                <p class="fifthpage__hidden__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
 Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.</p>
                             </div>
                         </li>
-                        <li class="fouthpage__item"><p>вегетарианское</p>
-                            <div class="fouthpage__hidden">
-                                <img class="fouthpage__hidden__img" src="img/meat.png" alt="meat">
-                                <p class="fouthpage__hidden__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
+                        <li class="fifthpage__item"><p>вегетарианское</p>
+                            <div class="fifthpage__hidden">
+                                <img class="fifthpage__hidden__img" src="img/meat.png" alt="meat">
+                                <p class="fifthpage__hidden__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
 Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.</p>
                             </div>
                         </li>
-                        <li class="fouthpage__item"><p>диетическое</p>
-                            <div class="fouthpage__hidden">
-                                <img class="fouthpage__hidden__img" src="img/meat.png" alt="meat">
-                                <p class="fouthpage__hidden__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
+                        <li class="fifthpage__item"><p>диетическое</p>
+                            <div class="fifthpage__hidden">
+                                <img class="fifthpage__hidden__img" src="img/meat.png" alt="meat">
+                                <p class="fifthpage__hidden__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
 Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.</p>
                             </div>
                         </li>
