--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </section>
             <!--2nd page-->
             <section class="section second-page">
-                <div class="container">
+                <div class="container container__secondpage">
                     <div class="secondpage__top">
                         <h1 class="page-title second-page__title">мы лучшие</h1>
                     </div>
@@ -153,24 +153,26 @@
             </section>
             <!--5th page-->
             <section class="section fifth-page">
-                <div class="container">
+                <!--<div class="container">-->
                     <ul class="fifthpage__blocks">
                         <li class="fifthpage__item">
-                            <div class="vertial-text"><p>для мясоедов</p></div>
+                            <div class="vertical-text"><p>для мясоедов</p></div>
                             <div class="fifthpage__hidden">
                                 <img class="fifthpage__hidden__img" src="img/meat.png" alt="meat">
                                 <p class="fifthpage__hidden__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
 Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.</p>
                             </div>
                         </li>
-                        <li class="fifthpage__item"><p>вегетарианское</p>
+                        <li class="fifthpage__item">
+                            <div class="vertical-text"><p>вегетарианское</p></div>
                             <div class="fifthpage__hidden">
                                 <img class="fifthpage__hidden__img" src="img/meat.png" alt="meat">
                                 <p class="fifthpage__hidden__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
 Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову.</p>
                             </div>
                         </li>
-                        <li class="fifthpage__item"><p>диетическое</p>
+                        <li class="fifthpage__item">
+                            <div class="vertical-text"><p>диетическое</p></div>
                             <div class="fifthpage__hidden">
                                 <img class="fifthpage__hidden__img" src="img/meat.png" alt="meat">
                                 <p class="fifthpage__hidden__text">Речевой акт редуцирует диалектический характер. Развивая эту тему, заимствование редуцирует конструктивный механизм сочленений. Лирический субъект начинает диссонансный анжамбеман. Наш современник стал особенно чутко относиться к слову, однако механизм сочленений неустойчив. Модальность высказывания, как справедливо считает И.Гальперин, пространственно выбирает метр.
@@ -178,7 +180,7 @@
                             </div>
                         </li>
                     </ul>
-                </div>
+                <!--</div>-->
             </section>
             <!--feedback page-->
             <section class="section feedback-page">
