--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li class="fouthpage__item"><p class="fouthpage__name">ричард джеймс</p>
-                                    <div class="fouthpage__hidden">
+                                <li class="fouthpage__item fouthpage__item--show"><p class="fouthpage__name">ричард джеймс</p>
+                                    <div class="fouthpage__hidden fouthpage__hidden">
                                         <div class="fouthpage__hidden__img">
                                             <img class="fouthpage__img" src="img/operator.jpg" alt="operator">
                                         </div>
@@ -361,7 +361,19 @@
             </section>
             <!--8th page-->
             <section class="section eight-page">
-                <div class="container">
+                <div class="container__map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d18804.792292722028!2d27.558660497870495!3d53.90333033167175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sby!4v1501688605411" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <div class="footer">
+                        <div class="footer__content">
+                            <div class="footer__left">
+                                <p class="address">Санкт-Петербург, ул.Бабушкина, д.12/1, 15</p>
+                                <a href="" class="phone">+7 (812) 377-13-77</a>
+                            </div>
+                            <div class="footer__right">
+                                <img src="img/logo.png" alt="some">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
