--- a/index.html
+++ b/index.html
@@ -292,36 +292,36 @@
                                 <div class="forms__left">
                                     <div class="forms__row first__row">
                                         <label class="forms__cell">
-                                            <div class="forms__field__title">Ваше имя</div>
-                                            <input type="text" class="forms__input__text" placeholder="Андрей">
+                                            <div class="forms__field__title">Title</div>
+                                            <input type="text" class="forms__input__text" placeholder="boo">
                                         </label>
                                         <label class="forms__cell">
-                                            <div class="forms__field__title">Ваше имя</div>
-                                            <input type="text" class="forms__input__text" placeholder="Андрей">
+                                            <div class="forms__field__title">Title</div>
+                                            <input type="text" class="forms__input__text" placeholder="boo">
                                         </label>
                                     </div>
                                     <div class="forms__row second__row">
                                         <label class="forms__cell">
-                                            <div class="forms__field__title">Ваше имя</div>
-                                            <input type="text" class="forms__input__text" placeholder="Андрей">
+                                            <div class="forms__field__title">Title</div>
+                                            <input type="text" class="forms__input__text" placeholder="boo">
                                         </label>
                                     </div>
                                     <div class="forms__row third__row">
                                         <label class="forms__cell">
-                                            <div class="forms__field__title">Ваше имя</div>
-                                            <input type="text" class="forms__input__text" placeholder="Андрей">
+                                            <div class="forms__field__title">Title</div>
+                                            <input type="text" class="forms__input__text" placeholder="boo">
                                         </label>
                                         <label class="forms__cell">
-                                            <div class="forms__field__title">Ваше имя</div>
-                                            <input type="text" class="forms__input__text" placeholder="Андрей">
+                                            <div class="forms__field__title">Title</div>
+                                            <input type="text" class="forms__input__text" placeholder="boo">
                                         </label>
                                         <label class="forms__cell">
-                                            <div class="forms__field__title">Ваше имя</div>
-                                            <input type="text" class="forms__input__text" placeholder="Андрей">
+                                            <div class="forms__field__title">Title</div>
+                                            <input type="text" class="forms__input__text" placeholder="boo">
                                         </label>
                                         <label class="forms__cell">
-                                            <div class="forms__field__title">Ваше имя</div>
-                                            <input type="text" class="forms__input__text" placeholder="Андрей">
+                                            <div class="forms__field__title">Title</div>
+                                            <input type="text" class="forms__input__text" placeholder="boo">
                                         </label>
                                     </div>
                                 </div>
@@ -329,7 +329,7 @@
                                     <div class="forms__row">
                                         <label class="forms__textarea-label">
                                             <div class="forms__field--title">Текст отзыва</div>
-                                            <textarea type="textarea" class="forms__input--textarea" placeholder="Оставьте отзыв"></textarea>
+                                            <textarea type="textarea" class="forms__input--textarea" placeholder="Комментарии"></textarea>
                                         </label>
                                     </div>
                                     <div class="forms__buttons">
