--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                     </div>
                 </div>
             </section>
+
             <!--5th page-->
             <section class="section fifth-page">
                 <!--<div class="container">-->
@@ -227,6 +228,7 @@
                     </ul>
                 <!--</div>-->
             </section>
+
             <!--feedback page-->
             <section class="section feedback-page">
                     <ul class="feedback__list">
@@ -320,6 +322,7 @@
                         </li>
                     </ul>
             </section>
+
             <!--7th page-->
             <section class="section seventh-page">
                 <div class="container seventhpage">
@@ -327,95 +330,76 @@
                         <div class="seventhpage__top">
                             <h2 class="page-title yellow__title">закажите доставку</h2>
                         </div>
-
-  <!--<div class="form">
-            <form action="">
-                <div cl></div>
-                <div class="form__row">
-                  <input type="text" class="form__input">
-                  <input type="text" class="form__input">
-                </div>
-                <div class="form__row">
-                  <input type="text" class="form__input">
-                </div>
-                <div class="form__row">
-                  <input type="text" class="form__input">
-                  <input type="text" class="form__input">
-                  <input type="text" class="form__input">
-                  <input type="text" class="form__input">
-                </div>
-            </form>
-          </div>-->
-<!--Form-->
-
-
                         <div class="form__container">
                             <form method="post">
                                 <div class="form">
                                     <div class="form__left">
                                         <div class="form__row first__row">
                                             <label class="form__cell">
-                                                <div class="form__field__title">Title</div>
-                                                <input type="text" class="form__input__text" placeholder="boo">
+                                                <div class="form__field__title">Имя</div>
+                                                <input type="text" class="form__input__text">
                                             </label>
                                             <label class="form__cell">
-                                                <div class="form__field__title">Title</div>
-                                                <input type="text" class="form__input__text" placeholder="boo">
+                                                <div class="form__field__title">Телефон</div>
+                                                <input type="text" class="form__input__text">
                                             </label>
                                         </div>
                                         <div class="form__row second__row">
                                             <label class="form__cell">
-                                                <div class="form__field__title">Title</div>
-                                                <input type="text" class="form__input__text" placeholder="boo">
+                                                <div class="form__field__title">Улица</div>
+                                                <input type="text" class="form__input__text">
                                             </label>
                                         </div>
                                         <div class="form__row third__row">
                                             <label class="form__cell">
-                                                <div class="form__field__title">Title</div>
-                                                <input type="text" class="form__input__text" placeholder="boo">
+                                                <div class="form__field__title">Дом</div>
+                                                <input type="text" class="form__input__text">
                                             </label>
                                             <label class="form__cell">
-                                                <div class="form__field__title">Title</div>
-                                                <input type="text" class="form__input__text" placeholder="boo">
+                                                <div class="form__field__title">Корпус</div>
+                                                <input type="text" class="form__input__text">
                                             </label>
                                             <label class="form__cell">
-                                                <div class="form__field__title">Title</div>
-                                                <input type="text" class="form__input__text" placeholder="boo">
+                                                <div class="form__field__title">Квартира</div>
+                                                <input type="text" class="form__input__text">
                                             </label>
                                             <label class="form__cell">
-                                                <div class="form__field__title">Title</div>
-                                                <input type="text" class="form__input__text" placeholder="boo">
+                                                <div class="form__field__title">Этаж</div>
+                                                <input type="text" class="form__input__text">
                                             </label>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="form__right">
-                                    <div class="form__row">
-                                        <label class="form__textarea-label">
-                                            <div class="form__field--title">Текст отзыва</div>
-                                            <textarea type="textarea" class="form__input--textarea" placeholder="Комментарии"></textarea>
-                                        </label>
-                                    </div>
-                                    <div class="form__buttons">
-                                        <div class="form__buttons--left">
-                                            <div class="form__buttons--title">Отображать фото в отзыве?</div>
-                                            <div class="form__radio--container">
+                                    <div class="form__right">
+                                        <div class="form__row">
+                                            <label class="form__textarea-label">
+                                                <div class="form__field--title">Комментарий</div>
+                                                <textarea type="textarea" class="form__input__textarea"></textarea>
+                                            </label>
+                                        </div>
+                                        <div class="form__elements">
+                                            <div class="radio__container">
                                                 <label class="form__radio">
                                                     <input type="radio" name="photo" class="form__radio--element" checked>
                                                     <div class="form__radio--fake"></div>
-                                                    <div class="form__radio--text">Да</div>
+                                                    <div class="form__radio__text">Потребуется сдача</div>
                                                 </label>
-                                            </div>
-                                            <div class="form__radio--container">
                                                 <label class="form__radio">
                                                     <input type="radio" name="photo" class="form__radio--element">
                                                     <div class="form__radio--fake"></div>
-                                                    <div class="form__radio--text">Нет</div>
+                                                    <div class="form__radio__text">Оплата по карте</div>
                                                 </label>
-                                            </div>
+                                            </div>      
                                         </div>
-                                    <div class="form__buttons--right">
-                                        <button class="submit__button" type="submit" value="Отправить">Отправить</button>
+                                        <div class="checkbox__container">
+                                            <label class="form__checkbox">
+                                                <input type="checkbox" name="photo" class="form__checkbox--element" checked>
+                                                <div class="form__checkbox__text">Не перезванивать</div>
+                                            </label>
+                                        </div>
+                                        <div class="form__buttons">
+                                            <button class="submit__button" type="submit">Заказать</button>
+                                            <button class="clear__button" type="reset">Очистить</button>
+                                        </div>
                                     </div>
                                 </div>
                             </form>
@@ -423,8 +407,9 @@
                     </div>
                 </div>
             </section>
+
             <!--8th page-->
-            <section class="section eight-page">
+            <section class="section eightpage">
                 <div class="container__map">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d18804.792292722028!2d27.558660497870495!3d53.90333033167175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sby!4v1501688605411" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
                     <div class="footer">
