--- a/index.html
+++ b/index.html
@@ -77,7 +77,14 @@
                         </div>
                     </main>
                     <div class="arrow-first">
-                        <a href="" data-goto="1"><img src="img/arrow1slide.png" alt="arrow"></a>
+                        <a href="" data-goto="1">
+                            <!--<img src="img/arrow1slide.png" alt="arrow">-->
+                            <div class="svg_wrap">
+                                <svg class="arrow">
+                                    <use xlink:href="img/sprite.svg#arrow-scroll"></use>
+                                </svg>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </section>
@@ -90,21 +97,36 @@
                     <div class="secondpage__main">
                         <ul class="secondpage__blocks">
                             <li class="secondpage__item">
-                                <img class="secondpage__img" src="img/meat.png" alt="meat">
+                                <!--<img class="secondpage__img" src="img/meat.png" alt="meat">-->
+                                <div class="secondpage__img">
+                                    <svg class="secondpage__img--meat">
+                                        <use xlink:href="img/sprite.svg#meat"></use>
+                                    </svg>
+                                </div>
                                 <div class="secondpage__title">100% свежее мясо</div>
                                 <div class="secondpage__text">
                                     <p>Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.</p>
                                 </div>
                             </li>
                             <li class="secondpage__item">
-                                <img class="secondpage__img" src="img/hand.png" alt="hand">
+                                <!--<img class="secondpage__img" src="img/hand.png" alt="hand">-->
+                                <div class="secondpage__img">
+                                    <svg class="secondpage__img--hand">
+                                        <use xlink:href="img/sprite.svg#hand"></use>
+                                    </svg>
+                                </div>
                                 <div class="secondpage__title">Ручная сборка</div>
                                 <div class="secondpage__text">
                                     <p>Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.</p>
                                 </div>
                             </li>
                             <li class="secondpage__item">
-                                <img class="secondpage__img" src="img/nature.png" alt="nature">
+                                <!--<img class="secondpage__img" src="img/nature.png" alt="nature">-->
+                                <div class="secondpage__img">
+                                    <svg class="secondpage__img--nature">
+                                        <use xlink:href="img/sprite.svg#natural"></use>
+                                    </svg>
+                                </div>
                                 <div class="secondpage__title">Натуральные ингредиенты</div>
                                 <div class="secondpage__text">
                                     <p>Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.</p>
@@ -421,7 +443,19 @@
                                 <a href="" class="phone">+7 (812) 377-13-77</a>
                             </div>
                             <div class="footer__right">
-                                <img src="img/logo.png" alt="some">
+                                <!--<img src="img/logo.png" alt="some">-->
+                                <svg class="icon">
+                                    <use xlink:href="img/sprite.svg#vk"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="img/sprite.svg#fb"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="img/sprite.svg#inst"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="img/sprite.svg#twitter"></use>
+                                </svg>
                             </div>
                         </div>
                     </div>
